Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1541,7 +1541,7 @@
   "pli-tv-kd11:34.1.15": "he gave a teaching and addressed the monks: ",
   "pli-tv-kd11:34.1.16": "“Well then, the Sangha should lift that legal procedure of ejection for not giving up a bad view. ",
   "pli-tv-kd11:34.2.0": "7.5 The group of forty-three on not to be lifted ",
-  "pli-tv-kd11:34.2.1": "“When a monk has five qualities, a legal procedure of ejecting him for not giving up a bad view should not be lifted: ",
+  "pli-tv-kd11:34.2.1": "“When a monk has five qualities, a legal procedure of ejecting him for not giving up a bad view shouldn’t be lifted: ",
   "pli-tv-kd11:34.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
   "pli-tv-kd11:34.2.4": "When a monk has another five qualities, a procedure of ejecting him for not giving up a bad view should not be lifted: ",
   "pli-tv-kd11:34.2.5": "he commits the same offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; he commits an offense similar to the one for which the Sangha did the procedure of ejecting him for not giving up a bad view; he commits an offense worse than the one for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
