--- a/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
@@ -6,7 +6,7 @@
   "an11.454-501:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.454-501:1.2": "(…) dans les pensées passives liées aux formes visibles (…)",
   "an11.454-501:1.3": "dans les pensées passives liées aux sons (…)",
-  "an11.454-501:1.4": "dans les réflexions liées aux odeurs (…)",
+  "an11.454-501:1.4": "dans les pensées passives liées aux odeurs (…)",
   "an11.454-501:1.5": "dans les réflexions liées aux saveurs (…)",
   "an11.454-501:1.6": "dans les réflexions liées aux sensations corporelles (…)",
   "an11.454-501:1.7": "de rester à observer l’impermanence dans les réflexions liées aux phénomènes mentaux (…)",
