--- a/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.454-501_translation-fr-sekha.json
@@ -9,7 +9,7 @@
   "an11.454-501:1.4": "dans les pensées passives liées aux odeurs (…)",
   "an11.454-501:1.5": "dans les pensées passives liées aux saveurs (…)",
   "an11.454-501:1.6": "dans les pensées passives liées aux sensations corporelles (…)",
-  "an11.454-501:1.7": "de rester à observer l’impermanence dans les réflexions liées aux phénomènes mentaux (…)",
+  "an11.454-501:1.7": "de rester à observer l’impermanence dans les pensées passives liées aux phénomènes mentaux (…)",
   "an11.454-501:1.8": "de rester à observer l’insatisfaisance (…)",
   "an11.454-501:1.9": "de rester à observer le sans-propriétaire (…)",
   "an11.454-501:1.10": "de rester à observer la destruction (…)",
