Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
@@ -7,7 +7,7 @@
   "an11.406-453:1.2": "(…) dans les pensées liées aux formes visibles (…)",
   "an11.406-453:1.3": "dans les pensées liées aux sons (…)",
   "an11.406-453:1.4": "dans les pensées liées aux odeurs (…)",
-  "an11.406-453:1.5": "dans les pensées liées aux saveurs (…)",
+  "an11.406-453:1.5": "dans les pensées actives liées aux saveurs (…)",
   "an11.406-453:1.6": "dans les pensées actives liées aux sensations corporelles (…)",
   "an11.406-453:1.7": "dans les pensées actives liées aux phénomènes mentaux (…)"
 }
