--- a/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.406-453_translation-fr-sekha.json
@@ -5,7 +5,7 @@
   "an11.406-453:0.4": "Discours sur les pensées liées aux formes visibles etc.",
   "an11.406-453:1.1": "(chacun des items est à développer comme dans le cas de l’œil)",
   "an11.406-453:1.2": "(…) dans les pensées liées aux formes visibles (…)",
-  "an11.406-453:1.3": "dans les pensées liées aux sons (…)",
+  "an11.406-453:1.3": "dans les pensées actives liées aux sons (…)",
   "an11.406-453:1.4": "dans les pensées actives liées aux odeurs (…)",
   "an11.406-453:1.5": "dans les pensées actives liées aux saveurs (…)",
   "an11.406-453:1.6": "dans les pensées actives liées aux sensations corporelles (…)",
