--- a/translation/en/sujato/sutta/kn/thig/thig2.3_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thig/thig2.3_translation-en-sujato.json
@@ -7,7 +7,7 @@
   "thig2.3:1.3": "My shameless husband popped up like a mushroom, ",
   "thig2.3:1.4": "my mortar wafted like an eel. ",
   "thig2.3:2.1": "I destroy greed and hate, ",
-  "thig2.3:2.2": "I sear them and sizzle them up. ",
+  "thig2.3:2.2": "they sizzle and hiss.",
   "thig2.3:2.3": "Having gone to the root of a tree, ",
   "thig2.3:2.4": "I meditate happily, thinking, “Oh, what bliss!”"
 }
