--- a/translation/en/sujato/sutta/kn/thig/thig2.3_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thig/thig2.3_translation-en-sujato.json
@@ -5,7 +5,7 @@
   "thig2.3:1.1": "I’m well freed, well freed, ",
   "thig2.3:1.2": "so very well freed from the pestle! ",
   "thig2.3:1.3": "My shameless husband popped up like a mushroom, ",
-  "thig2.3:1.4": "my mortar wafted like an eel. ",
+  "thig2.3:1.4": "my mortar wafted like eels. ",
   "thig2.3:2.1": "Greed and hate sizzle and hiss",
   "thig2.3:2.2": "as I destroy them.",
   "thig2.3:2.3": "Having gone to the root of a tree, ",
