--- a/translation/de/sabbamitta/sutta/an/an7/an7.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.55_translation-de-sabbamitta.json
@@ -25,7 +25,7 @@
   "an7.55:3.8": "‚Es könnte nicht sein, und es könnte nicht mein sein. … ",
   "an7.55:3.9": "Mit dem Auflösen der fünf niederen Fesseln erlischt er zwischen zwei Leben. ",
   "an7.55:4.1": "Dann übt da eine Nonne so: ",
-  "an7.55:4.2": "‚Es ist vielleicht nicht, und es ist vielleicht nicht mein. … ",
+  "an7.55:4.2": "‚Es könnte nicht sein, und es könnte nicht mein sein. … ",
   "an7.55:4.3": "Mit dem Auflösen der fünf niederen Fesseln erlischt sie zwischen zwei Leben. ",
   "an7.55:4.4": "Wie wenn man auf einen eisernen Topf einschlägt, der den ganzen Tag erhitzt wurde: Ein Funke, der wegfliegt und davonschwebt, würde kurz vor dem Auftreffen erlöschen. ",
   "an7.55:4.5": "Ebenso ist es bei einer Nonne, die so übt: ",
