--- a/translation/de/sabbamitta/sutta/an/an7/an7.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.55_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "an7.55:5.6": "‚Es könnte nicht sein, und es könnte nicht mein sein. … ",
   "an7.55:5.7": "Mit dem Auflösen der fünf niederen Fesseln erlischt er beim Auftreffen. ",
   "an7.55:6.1": "Dann übt da eine Nonne so: ",
-  "an7.55:6.2": "‚Es ist vielleicht nicht, und es ist vielleicht nicht mein. … ",
+  "an7.55:6.2": "‚Es könnte nicht sein, und es könnte nicht mein sein. … ",
   "an7.55:6.3": "Mit dem Auflösen der fünf niederen Fesseln erlischt sie ohne besondere Anstrengung. ",
   "an7.55:6.4": "Wie wenn man auf einen eisernen Topf einschlägt, der den ganzen Tag erhitzt wurde: Ein Funke, der wegfliegt und davonschwebt, würde auf einen kleinen Haufen Gras oder Zweige fallen. ",
   "an7.55:6.5": "Dort würde er ein Feuer entzünden und Rauch hervorbringen. Aber das Feuer würde das bisschen Gras oder die Zweige aufbrauchen und dann aus Mangel an Nahrung erlöschen. ",
