--- a/translation/de/sabbamitta/sutta/an/an7/an7.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an7/an7.55_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an7.55:7.4": "Wie wenn man auf einen eisernen Topf einschlägt, der den ganzen Tag erhitzt wurde: Ein Funke, der wegfliegt und davonschwebt, würde auf einen großen Haufen Gras oder Zweige fallen. ",
   "an7.55:7.5": "Dort würde er ein Feuer entzünden und Rauch hervorbringen. Aber das Feuer würde das viele Gras oder die Zweige aufbrauchen und dann aus Mangel an Nahrung erlöschen. ",
   "an7.55:7.6": "Ebenso ist es bei einem Mönch, der so übt: ",
-  "an7.55:7.7": "‚Es ist vielleicht nicht, und es ist vielleicht nicht mein. … ",
+  "an7.55:7.7": "‚Es könnte nicht sein, und es könnte nicht mein sein. … ",
   "an7.55:7.8": "Mit dem Auflösen der fünf niederen Fesseln erlischt er mit besonderer Anstrengung. ",
   "an7.55:8.1": "Dann übt da eine Nonne so: ",
   "an7.55:8.2": "‚Es ist vielleicht nicht, und es ist vielleicht nicht mein. Es wird nicht sein, und es wird nicht mein sein. Was besteht, was entstanden ist, das gebe ich auf.‘ So gewinnt sie Gleichmut. ",
