Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -687,6 +687,7 @@
   "sn-name:686.sn22.75": "Ursprung (2) ",
   "sn-name:687.sn22.76": "Die Vollendeten ",
   "sn-name:688.sn22.77": "Die Vollendeten (2) ",
+  "sn-name:689.sn22.78": "Der Löwe ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
   "sn-name:702.sn22.90": "Mit Channa ",
   "sn-name:705.sn22-pupphavagga": "Das Kapitel über Blumen ",
