--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.78:0.1": "Verbundene Lehrreden 22.78 ",
   "sn22.78:0.2": "8. Das Kapitel über Jucken ",
-  "sn22.78:0.3": "Der Löwe "
+  "sn22.78:0.3": "Der Löwe ",
+  "sn22.78:1.1": "In Sāvatthī. "
 }
