--- a/translation/de/sabbamitta/sutta/an/an4/an4.33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.33_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an4.33:1.3": "blickt ringsumher in die vier Himmelsrichtungen ",
   "an4.33:1.4": "und brüllt dreimal sein Löwengebrüll. ",
   "an4.33:1.5": "Dann zieht er auf Beute aus. ",
-  "an4.33:1.6": "Und in der Regel sind die Tiere, die das Brüllen des Löwen, des Königs der Tiere, hören, von Furcht, Angst und Schrecken erfüllt. ",
+  "an4.33:1.6": "Und von allen Tieren, die das Brüllen des Löwen, des Königs der Tiere, hören, sind die meisten von Furcht, Angst und Schrecken erfüllt. ",
   "an4.33:1.7": "Die Höhlentiere fliehen in ihre Höhlen, die Wassertiere ins Wasser, die Waldtiere in den Wald und die Vögel erheben sich in die Luft. ",
   "an4.33:1.8": "Selbst die königlichen Elefanten, die in den Dörfern, Marktflecken und Hauptstädten mit festem Geschirr angekettet sind, zerreißen ihre Ketten, lassen vor Schreck Urin und Kot unter sich und fliehen hierhin und dorthin. ",
   "an4.33:1.9": "So mächtig ist der Löwe, der König der Tiere, unter den Tieren, so gewaltig und von so hohem Rang! ",
