--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -4,5 +4,5 @@
   "sn22.78:0.3": "Der Löwe ",
   "sn22.78:1.1": "In Sāvatthī. ",
   "sn22.78:1.2": "„Mönche und Nonnen, gegen Abend kommt der Löwe, der König der Tiere, aus seiner Höhle, gähnt, blickt ringsumher in die vier Himmelsrichtungen und brüllt dreimal sein Löwengebrüll. Dann zieht er auf Beute aus. ",
-  "sn22.78:1.3": "Und von allen Tieren, die das Brüllen des Löwen, des Königs der Tiere, hören, sind die meisten von Furcht, Angst und Schrecken erfüllt. "
+  "sn22.78:1.3": "Und von allen Tieren, die das Brüllen des Löwen, des Königs der Tiere, hören, sind die meisten von Furcht, Angst und Schrecken erfüllt. Die Höhlentiere fliehen in ihre Höhlen, die Wassertiere ins Wasser, die Waldtiere in den Wald und die Vögel erheben sich in die Luft. "
 }
