Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.78:1.5": "So mächtig ist der Löwe, der König der Tiere, unter den Tieren, so gewaltig und von so hohem Rang! ",
   "sn22.78:2.1": "Ebenso ist es, wenn ein Klargewordener in der Welt erscheint, ein Vollendeter, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet – dann lehrt er den Dhamma: ",
   "sn22.78:2.2": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
-  "sn22.78:2.3": "So ist Gefühl, so ist sein Ursprung, so sein Enden. "
+  "sn22.78:2.3": "So ist Gefühl, so ist sein Ursprung, so sein Enden. ",
+  "sn22.78:2.4": "So ist Wahrnehmung, so ist ihr Ursprung, so ihr Enden. "
 }
