--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.78:2.2": "‚So ist Form, so ist ihr Ursprung, so ihr Enden. ",
   "sn22.78:2.3": "So ist Gefühl, so ist sein Ursprung, so sein Enden. ",
   "sn22.78:2.4": "So ist Wahrnehmung, so ist ihr Ursprung, so ihr Enden. ",
-  "sn22.78:2.5": "So sind Entscheidungen, so ist ihr Ursprung, so ihr Enden. "
+  "sn22.78:2.5": "So sind Entscheidungen, so ist ihr Ursprung, so ihr Enden. ",
+  "sn22.78:2.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ "
 }
