Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.78:2.3": "So ist Gefühl, so ist sein Ursprung, so sein Enden. ",
   "sn22.78:2.4": "So ist Wahrnehmung, so ist ihr Ursprung, so ihr Enden. ",
   "sn22.78:2.5": "So sind Entscheidungen, so ist ihr Ursprung, so ihr Enden. ",
-  "sn22.78:2.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ "
+  "sn22.78:2.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
+  "sn22.78:2.7": "Nun gibt es da Götter, die ein langes Leben haben, die schön sind, sehr glücklich und lange in ihren göttlichen Palästen leben. Wenn sie diese Lehre des Klargewordenen hören, sind die meisten von Furcht, Angst und Schrecken erfüllt: "
 }
