--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.78:2.5": "So sind Entscheidungen, so ist ihr Ursprung, so ihr Enden. ",
   "sn22.78:2.6": "So ist Bewusstsein, so ist sein Ursprung, so sein Enden.‘ ",
   "sn22.78:2.7": "Nun gibt es da Götter, die ein langes Leben haben, die schön sind, sehr glücklich und lange in ihren göttlichen Palästen leben. Wenn sie diese Lehre des Klargewordenen hören, sind die meisten von Furcht, Angst und Schrecken erfüllt: ",
-  "sn22.78:2.8": "‚Oh nein! Da sind wir offenbar unbeständig, und wir dachten, wir seien beständig! "
+  "sn22.78:2.8": "‚Oh nein! Da sind wir offenbar unbeständig, und wir dachten, wir seien beständig! ",
+  "sn22.78:2.9": "Da währen wir offenbar nicht fort, und wir dachten, wir seien immerwährend! "
 }
