--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.78:2.7": "Nun gibt es da Götter, die ein langes Leben haben, die schön sind, sehr glücklich und lange in ihren göttlichen Palästen leben. Wenn sie diese Lehre des Klargewordenen hören, sind die meisten von Furcht, Angst und Schrecken erfüllt: ",
   "sn22.78:2.8": "‚Oh nein! Da sind wir offenbar unbeständig, und wir dachten, wir seien beständig! ",
   "sn22.78:2.9": "Da währen wir offenbar nicht fort, und wir dachten, wir seien immerwährend! ",
-  "sn22.78:2.10": "Da sind wir offenbar zeitlich, und wir dachten, wir seien ewig! "
+  "sn22.78:2.10": "Da sind wir offenbar zeitlich, und wir dachten, wir seien ewig! ",
+  "sn22.78:2.11": "Oh nein! Da sind wir offenbar unbeständig, währen nicht fort, sind zeitlich und Teil der Persönlichkeit.‘ "
 }
