Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.78:2.8": "‚Oh nein! Da sind wir offenbar unbeständig, und wir dachten, wir seien beständig! ",
   "sn22.78:2.9": "Da währen wir offenbar nicht fort, und wir dachten, wir seien immerwährend! ",
   "sn22.78:2.10": "Da sind wir offenbar zeitlich, und wir dachten, wir seien ewig! ",
-  "sn22.78:2.11": "Oh nein! Da sind wir offenbar unbeständig, währen nicht fort, sind zeitlich und Teil der Persönlichkeit.‘ "
+  "sn22.78:2.11": "Oh nein! Da sind wir offenbar unbeständig, währen nicht fort, sind zeitlich und Teil der Persönlichkeit.‘ ",
+  "sn22.78:2.12": "So mächtig ist der Klargewordene in der Welt mit ihren Göttern, so gewaltig und von so hohem Rang.“ "
 }
