Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.78:3.3": "das Rad des Dhamma ins Rollen, ",
   "sn22.78:3.4": "des Dhamma aus seiner eigenen Einsicht: ",
   "sn22.78:4.1": "Persönlichkeit, ihr Aufhören, ",
-  "sn22.78:4.2": "die Herkunft der Persönlichkeit "
+  "sn22.78:4.2": "die Herkunft der Persönlichkeit ",
+  "sn22.78:4.3": "und der edle achtfache Pfad, "
 }
