--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.78:4.1": "Persönlichkeit, ihr Aufhören, ",
   "sn22.78:4.2": "die Herkunft der Persönlichkeit ",
   "sn22.78:4.3": "und der edle achtfache Pfad, ",
-  "sn22.78:4.4": "der zum Stillen des Leidens führt. "
+  "sn22.78:4.4": "der zum Stillen des Leidens führt. ",
+  "sn22.78:5.1": "Und da sind die Götter, die lange leben, "
 }
