--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.78:4.4": "der zum Stillen des Leidens führt. ",
   "sn22.78:5.1": "Und da sind die Götter, die lange leben, ",
   "sn22.78:5.2": "so schön und strahlend, ",
-  "sn22.78:5.3": "voller Angst und Schrecken, "
+  "sn22.78:5.3": "voller Angst und Schrecken, ",
+  "sn22.78:5.4": "wie die Tiere, wenn sie den Löwen hören. "
 }
