--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.78:5.1": "Und da sind die Götter, die lange leben, ",
   "sn22.78:5.2": "so schön und strahlend, ",
   "sn22.78:5.3": "voller Angst und Schrecken, ",
-  "sn22.78:5.4": "wie die Tiere, wenn sie den Löwen hören. "
+  "sn22.78:5.4": "wie die Tiere, wenn sie den Löwen hören. ",
+  "sn22.78:6.1": "‚Wir sind über die Persönlichkeit nicht hinausgelangt! "
 }
