--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn22.78:5.3": "voller Angst und Schrecken, ",
   "sn22.78:5.4": "wie die Tiere, wenn sie den Löwen hören. ",
   "sn22.78:6.1": "‚Wir sind über die Persönlichkeit nicht hinausgelangt! ",
-  "sn22.78:6.2": "Offenbar sind wir unbeständig!‘ "
+  "sn22.78:6.2": "Offenbar sind wir unbeständig!‘ ",
+  "sn22.78:6.3": "So reden sie, wenn sie das Wort "
 }
