--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.78_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn22.78:5.4": "wie die Tiere, wenn sie den Löwen hören. ",
   "sn22.78:6.1": "‚Wir sind über die Persönlichkeit nicht hinausgelangt! ",
   "sn22.78:6.2": "Offenbar sind wir unbeständig!‘ ",
-  "sn22.78:6.3": "So reden sie, wenn sie das Wort "
+  "sn22.78:6.3": "So reden sie, wenn sie das Wort ",
+  "sn22.78:6.4": "des Vollendeten hören, der frei ist und ausgeglichen.“ "
 }
