Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -105,5 +105,6 @@
   "mn3:7.19": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા નથી’—",
   "mn3:7.20": "આ ત્રીજી રીતે નવા ભિક્ષુ વખાણ કરવા લાયક છે.",
   "mn3:7.21": "આદરણીયો, નવા ભિક્ષુ આમ ત્રણ રીતે વખાણ કરવા લાયક છે.",
-  "mn3:7.22": "આમ આદરણીયો, એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે એવું કહેવાય."
+  "mn3:7.22": "આમ આદરણીયો, એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે એવું કહેવાય.",
+  "mn3:8.1": "આ બાબતમાં લોભ અને દ્વેષ ખરાબ વસ્તુઓ કહેવાય."
 }
