--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -107,5 +107,6 @@
   "mn3:7.21": "આદરણીયો, નવા ભિક્ષુ આમ ત્રણ રીતે વખાણ કરવા લાયક છે.",
   "mn3:7.22": "આમ આદરણીયો, એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા ગ્રહણ કરે છે એવું કહેવાય.",
   "mn3:8.1": "આ બાબતમાં લોભ અને દ્વેષ ખરાબ વસ્તુઓ કહેવાય.",
-  "mn3:8.2": "લોભ અને દ્વેષના ત્યાગ માટે દૃષ્ટિ અને જ્ઞાન ઉત્પન્ન કરનારો મધ્યમ માર્ગ છે જે શાંતિ, દિવ્યજ્ઞાન, સંબુદ્ધિ, અને નિર્વાણ તરફ લઇ જનારો છે."
+  "mn3:8.2": "લોભ અને દ્વેષના ત્યાગ માટે દૃષ્ટિ અને જ્ઞાન ઉત્પન્ન કરનારો મધ્યમ માર્ગ છે જે શાંતિ, દિવ્યજ્ઞાન, સંબુદ્ધિ, અને નિર્વાણ તરફ લઇ જનારો છે.",
+  "mn3:8.3": "અને આદરણીયો, એ કેવો દૃષ્ટિ અને જ્ઞાન ઉત્પન્ન કરનારો મધ્યમ માર્ગ છે જે શાંતિ, દિવ્યજ્ઞાન, સંબુદ્ધિ, અને નિર્વાણ તરફ લઇ જનારો છે?"
 }
