--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -112,5 +112,6 @@
   "mn3:8.4": "આ એ આર્ય અષ્ટાંગ માર્ગ જ છે—",
   "mn3:8.5": "સમ્યક્ દૃષ્ટિ, સમ્યક્ સંકલ્પ, સમ્યક્ વાણી, સમ્યક્ કાર્યો, સમ્યક્ આજીવિકા, સમ્યક્ ઉદ્યમ, સમ્યક્ સ્મૃતિ, સમ્યક્ સમાધિ.",
   "mn3:8.6": "આદરણીયો, આ જ એ દૃષ્ટિ અને જ્ઞાન ઉત્પન્ન કરનારો મધ્યમ માર્ગ છે જે શાંતિ, દિવ્યજ્ઞાન, સંબુદ્ધિ, અને નિર્વાણ તરફ લઇ જનારો છે.",
-  "mn3:9-15.1": "આ બાબતમાં ક્રોધ અને રોષ ખરાબ વસ્તુઓ કહેવાય …"
+  "mn3:9-15.1": "આ બાબતમાં ક્રોધ અને રોષ ખરાબ વસ્તુઓ કહેવાય …",
+  "mn3:9-15.2": "આ બાબતમાં તુચ્છકાર અને નિષ્ઠુરતા ખરાબ વસ્તુઓ કહેવાય."
 }
