Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -116,5 +116,6 @@
   "mn3:9-15.2": "તુચ્છકાર અને ક્રૂરતા ખરાબ વસ્તુઓ કહેવાય,",
   "mn3:9-15.3": "ઇર્ષા અને કંજૂસાઇ ખરાબ વસ્તુઓ કહેવાય,",
   "mn3:9-15.4": "છળ અને કપટ ખરાબ વસ્તુઓ કહેવાય.",
-  "mn3:9-15.5": "જડતા અને હિંસા ખરાબ વસ્તુઓ કહેવાય."
+  "mn3:9-15.5": "જડતા અને હિંસા ખરાબ વસ્તુઓ કહેવાય.",
+  "mn3:9-15.6": "માન અને અતિમાન ખરાબ વસ્તુઓ કહેવાય,"
 }
