Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -118,5 +118,6 @@
   "mn3:9-15.4": "છળ અને કપટ ખરાબ વસ્તુઓ કહેવાય.",
   "mn3:9-15.5": "જડતા અને હિંસા ખરાબ વસ્તુઓ કહેવાય.",
   "mn3:9-15.6": "અભિમાન અને ઘમંડ ખરાબ વસ્તુઓ કહેવાય,",
-  "mn3:9-15.7": "મદ અને પ્રમાદ ખરાબ વસ્તુઓ કહેવાય,"
+  "mn3:9-15.7": "મદ અને પ્રમાદ ખરાબ વસ્તુઓ કહેવાય,",
+  "mn3:9-15.8": "મદ અને પ્રમાદના ત્યાગ માટે દૃષ્ટિ અને જ્ઞાન ઉત્પન્ન કરનારો મધ્યમ માર્ગ છે જે શાંતિ, દિવ્યજ્ઞાન, સંબુદ્ધિ, અને નિર્વાણ તરફ લઇ જનારો છે."
 }
