--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -63,7 +63,7 @@
   "pli-tv-kd11:1.4.35": "We’ll take your side.” ",
   "pli-tv-kd11:1.4.36": "Because of this, new quarrels start and existing quarrels become worse. ",
   "pli-tv-kd11:1.4.37": "The Sangha does a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
-  "pli-tv-kd11:1.4.38": "Any monk who approves of doing a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka should remain silent. ",
+  "pli-tv-kd11:1.4.38": "Any monk who approves of doing this legal procedure should remain silent. ",
   "pli-tv-kd11:1.4.39": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:1.4.40": "For the third time I speak on this matter. ",
   "pli-tv-kd11:1.4.41": "Please, Venerables, I ask the Sangha to listen. ",
