Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -77,7 +77,7 @@
   "pli-tv-kd11:1.4.49": "We’ll take your side.” ",
   "pli-tv-kd11:1.4.50": "Because of this, new quarrels start and existing quarrels become worse. ",
   "pli-tv-kd11:1.4.51": "The Sangha does a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
-  "pli-tv-kd11:1.4.52": "Any monk who approves of doing a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka should remain silent. ",
+  "pli-tv-kd11:1.4.52": "Any monk who approves of doing this legal procedure should remain silent. ",
   "pli-tv-kd11:1.4.53": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:1.4.54": "The Sangha has done a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:1.4.55": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
