Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -262,7 +262,7 @@
   "pli-tv-kd11:9.2.13": "In addition, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.14": "The Sangha does a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.2.15": "instructing him to live with formal support. ",
-  "pli-tv-kd11:9.2.16": "Any monk who approves of doing this legal procedure against the monk Seyyasaka, ",
+  "pli-tv-kd11:9.2.16": "Any monk who approves of doing this legal procedure ",
   "pli-tv-kd11:9.2.17": "should remain silent. ",
   "pli-tv-kd11:9.2.18": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:9.2.19": "For the second time I speak on this matter. … ",
