Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -273,7 +273,7 @@
   "pli-tv-kd11:9.2.24": "In addition, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.25": "The Sangha does a legal procedure of demotion against the monk Seyyasaka, ",
   "pli-tv-kd11:9.2.26": "instructing him to live with formal support. ",
-  "pli-tv-kd11:9.2.27": "Any monk who approves of doing this legal procedure against the monk Seyyasaka, ",
+  "pli-tv-kd11:9.2.27": "Any monk who approves of doing this legal procedure ",
   "pli-tv-kd11:9.2.28": "should remain silent. ",
   "pli-tv-kd11:9.2.29": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:9.2.30": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka, ",
