Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -124,5 +124,6 @@
   "mn3:9-15.10": "આ એ આર્ય અષ્ટાંગ માર્ગ જ છે—",
   "mn3:9-15.11": "સમ્યક્ દૃષ્ટિ, સમ્યક્ સંકલ્પ, સમ્યક્ વાણી, સમ્યક્ કાર્યો, સમ્યક્ આજીવિકા, સમ્યક્ ઉદ્યમ, સમ્યક્ સ્મૃતિ, સમ્યક્ સમાધિ.",
   "mn3:9-15.12": "આદરણીયો, આ જ એ દૃષ્ટિ અને જ્ઞાન ઉત્પન્ન કરનારો મધ્યમ માર્ગ છે જે શાંતિ, દિવ્યજ્ઞાન, સંબુદ્ધિ, અને નિર્વાણ તરફ લઇ જનારો છે”.",
-  "mn3:9-15.13": "સારિપુત્રએ એવું કહ્યું."
+  "mn3:9-15.13": "સારિપુત્રએ એવું કહ્યું.",
+  "mn3:9-15.14": "એ ભિક્ષુઓ સારિપુત્રના વચનોથી સંતુષ્ટ અને આનંદિત થયા."
 }
