--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -400,7 +400,7 @@
   "pli-tv-kd11:11.2.22": "The group of eighteen on to be lifted is finished. ",
   "pli-tv-kd11:12.1.1": "“And this is how it should be lifted. ",
   "pli-tv-kd11:12.1.2": "After approaching the Sangha, the monk Seyyasaka should put his upper robes over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
-  "pli-tv-kd11:12.1.3": "‘Venerables, the Sangha has done a legal procedure of demotion against me, but I have conducted myself properly and suitably so as to deserve to be released. I ask for the legal procedure of demotion to be lifted.’ ",
+  "pli-tv-kd11:12.1.3": "‘Venerables, the Sangha has done a legal procedure of demotion against me, but I’ve conducted myself properly and suitably so as to deserve to be released. I ask for that legal procedure to be lifted.’ ",
   "pli-tv-kd11:12.1.4": "And he should ask a second ",
   "pli-tv-kd11:12.1.5": "and a third time. ",
   "pli-tv-kd11:12.2.1": "A competent and capable monk should then inform the Sangha: ",
