Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -447,8 +447,8 @@
   "pli-tv-kd11:13.3.2": "In the morning he robed up, took his bowl and robe, and entered Kīṭāgiri to collect almsfood. He was pleasing in his conduct: in going out and coming back, in looking ahead and looking aside, in bending and stretching his arms. His eyes were lowered, and he was perfect in deportment. ",
   "pli-tv-kd11:13.3.3": "When people saw him, they said, ",
   "pli-tv-kd11:13.3.4": "“Whoʼs this, acting like a moron and always frowning? ",
-  "pli-tv-kd11:13.3.5": "Who will give almsfood to him? ",
-  "pli-tv-kd11:13.3.6": "Almsfood should instead be given to our Venerables Assaji and Punabbasuka, for they are gentle, congenial, pleasant to speak with, greeting one with a smile, welcoming, friendly, open, the first to speak.” ",
+  "pli-tv-kd11:13.3.5": "Whoʼs gonna give almsfood to him? ",
+  "pli-tv-kd11:13.3.6": "Almsfood should be given to our Venerables Assaji and Punabbasuka, for they are gentle, congenial, pleasant to speak with, greeting one with a smile, welcoming, friendly, open, the first to speak.” ",
   "pli-tv-kd11:13.3.8": "A certain lay follower saw that monk walking for alms in Kīṭāgiri. ",
   "pli-tv-kd11:13.3.9": "He approached him, bowed, and said, ",
   "pli-tv-kd11:13.3.10": "“Venerable, have you received any almsfood?” ",
