Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -458,9 +458,9 @@
   "pli-tv-kd11:13.4.2": "He then said, “Where are you going, Venerable?” ",
   "pli-tv-kd11:13.4.3": "“I’m going to Sāvatthī to see the Buddha.” ",
   "pli-tv-kd11:13.4.4": "“Well then, would you please pay respect at the feet of the Buddha in my name and say, ",
-  "pli-tv-kd11:13.4.5": "‘Venerable Sir, the monastery in Kīṭāgiri has been corrupted. ",
-  "pli-tv-kd11:13.4.6": "Assaji and Punabbasuka are the resident monks there. They are bad and shameless, ",
-  "pli-tv-kd11:13.4.7": "and are misbehaving in many ways. ",
+  "pli-tv-kd11:13.4.5": "‘Venerable Sir, the monastery at Kīṭāgiri has been corrupted. ",
+  "pli-tv-kd11:13.4.6": "The bad and shameless monks Assaji and Punabbasuka are staying there. ",
+  "pli-tv-kd11:13.4.7": "And they’re misbehaving in many ways. ",
   "pli-tv-kd11:13.4.8": "They plant flowering trees, water them … ",
   "pli-tv-kd11:13.4.21": "And they misbehave in a variety of ways. ",
   "pli-tv-kd11:13.4.22": "Those who previously had faith and confidence have now lost it, ",
