Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -479,7 +479,7 @@
   "pli-tv-kd11:13.5.10": "He then told the Buddha all that had happened at Kīṭāgiri, ",
   "pli-tv-kd11:13.5.30": "adding, “That’s where I’ve come from, Sir.” ",
   "pli-tv-kd11:13.6.1": "Soon afterwards the Buddha had the Sangha gathered and questioned the monks: ",
-  "pli-tv-kd11:13.6.2": "“Is it true, monks, that the bad and shameless monks Assaji and Punabbasuka are misbehaving in this way? ",
+  "pli-tv-kd11:13.6.2": "“Is it true, monks, that the bad and shameless monks Assaji and Punabbasuka are staying at Kīṭāgiri and misbehaving in this way? ",
   "pli-tv-kd11:13.6.6": "And is it true that those people who previously had faith and confidence have now lost it, ",
   "pli-tv-kd11:13.6.7": "that there’s no longer any support for the Sangha, ",
   "pli-tv-kd11:13.6.8": "and that the good monks have left and the bad monks are staying on?” ",
