--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -490,7 +490,7 @@
   "pli-tv-kd11:13.6.28": "This will affect people’s confidence …” ",
   "pli-tv-kd11:13.6.29": "After rebuking them … ",
   "pli-tv-kd11:13.6.30": "he gave a teaching and addressed Sāriputta and Moggallāna: ",
-  "pli-tv-kd11:13.6.31": "“Sāriputta, the two of you should go and do a legal procedure of banishing the monks Assaji and Punabbasuka from Kīṭāgiri. They are your students.” ",
+  "pli-tv-kd11:13.6.31": "“Go to Kīṭāgiri and do a legal procedure of banishing the monks Assaji and Punabbasuka. They’re your students.” ",
   "pli-tv-kd11:13.6.32": "“Sir, how can we do a procedure of banishing these monks from Kīṭāgiri? They are temperamental and harsh.” ",
   "pli-tv-kd11:13.6.33": "“Well, take many monks.” ",
   "pli-tv-kd11:13.6.34": "“Yes.” ",
