Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -517,9 +517,9 @@
   "pli-tv-kd11:13.7.21": "These monks, Assaji and Punabbasuka, are corrupters of families and badly behaved. ",
   "pli-tv-kd11:13.7.22": "Their bad behavior is seen and heard about, ",
   "pli-tv-kd11:13.7.23": "and the families corrupted by them are seen and heard about. ",
-  "pli-tv-kd11:13.7.24": "The Sangha is doing a legal procedure of banishing them, ",
+  "pli-tv-kd11:13.7.24": "The Sangha does a legal procedure of banishing them, ",
   "pli-tv-kd11:13.7.25": "prohibiting the monks Assaji and Punabbasuka from staying at Kīṭāgiri. ",
-  "pli-tv-kd11:13.7.26": "Any monk who approves of doing a legal procedure of banishing them, prohibiting the monks Assaji and Punabbasuka from staying at Kīṭāgiri, should remain silent. ",
+  "pli-tv-kd11:13.7.26": "Any monk who approves of doing this legal procedure should remain silent. ",
   "pli-tv-kd11:13.7.27": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:13.7.28": "The Sangha has done the legal procedure of banishing the monks Assaji and Punabbasuka, ",
   "pli-tv-kd11:13.7.29": "prohibiting them from staying at Kīṭāgiri. ",
