Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -588,7 +588,7 @@
   "pli-tv-kd11:14.2.18": "The Sangha may, if it wishes, do a procedure of banishment against another three kinds of monks: ",
   "pli-tv-kd11:14.2.19": "those whose bodily conduct is harmful; those whose verbal conduct is harmful; those whose bodily and verbal conduct are harmful. ",
   "pli-tv-kd11:14.2.21": "The Sangha may, if it wishes, do a procedure of banishment against another three kinds of monks: ",
-  "pli-tv-kd11:14.2.22": "those who’ve wrong livelihood by body; those who’ve wrong livelihood by speech; those who’ve wrong livelihood by body and speech.” ",
+  "pli-tv-kd11:14.2.22": "those who have wrong livelihood by body; those who have wrong livelihood by speech; those who have wrong livelihood by body and speech.” ",
   "pli-tv-kd11:14.2.24": "The group of fourteen on wishing is finished. ",
   "pli-tv-kd11:15.1.0": "3.4 The eighteen kinds of conduct ",
   "pli-tv-kd11:15.1.1": "“A monk who’s had a legal procedure of banishment done against himself should conduct himself properly. ",
