Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -622,7 +622,7 @@
   "pli-tv-kd11:16.1.8": "“How can these monks act like this when the Sangha has done a legal procedure of banishing them?” ",
   "pli-tv-kd11:16.1.12": "They told the Buddha. ",
   "pli-tv-kd11:16.1.13": "Soon afterwards the Buddha had the Sangha gathered and questioned the monks: ",
-  "pli-tv-kd11:16.1.14": "“Is it true, monks, that the monks Assaji and Punabbasuka acted in this way?” ",
+  "pli-tv-kd11:16.1.14": "“Is it true, monks, that the monks Assaji and Punabbasuka are acting like this?” ",
   "pli-tv-kd11:16.1.18": "“It’s true, Sir.” ",
   "pli-tv-kd11:16.1.19": "The Buddha rebuked them … ",
   "pli-tv-kd11:16.1.20": "“It’s not suitable … ",
