Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -656,7 +656,7 @@
   "pli-tv-kd11:17.1.5": "and a third time. ",
   "pli-tv-kd11:17.1.6": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:17.2.1": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:17.2.2": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of banishment to be lifted. ",
+  "pli-tv-kd11:17.2.2": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:17.2.3": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of banishing him. ",
   "pli-tv-kd11:17.2.4": "This is the motion. ",
   "pli-tv-kd11:17.2.5": "Please, Venerables, I ask the Sangha to listen. ",
