Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -660,9 +660,9 @@
   "pli-tv-kd11:17.2.3": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of banishing him. ",
   "pli-tv-kd11:17.2.4": "This is the motion. ",
   "pli-tv-kd11:17.2.5": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:17.2.6": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of banishment to be lifted. ",
+  "pli-tv-kd11:17.2.6": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:17.2.7": "The Sangha lifts the legal procedure of banishing him. ",
-  "pli-tv-kd11:17.2.8": "Any monk who approves of lifting the legal procedure of banishing monk so-and-so should remain silent. ",
+  "pli-tv-kd11:17.2.8": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:17.2.9": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:17.2.10": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:17.2.11": "For the third time I speak on this matter. ",
