Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -667,9 +667,9 @@
   "pli-tv-kd11:17.2.10": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:17.2.11": "For the third time I speak on this matter. ",
   "pli-tv-kd11:17.2.12": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:17.2.13": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for the legal procedure of banishment to be lifted. ",
+  "pli-tv-kd11:17.2.13": "The Sangha has done a legal procedure of banishing monk so-and-so. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
   "pli-tv-kd11:17.2.14": "The Sangha lifts the legal procedure of banishing him. ",
-  "pli-tv-kd11:17.2.15": "Any monk who approves of lifting the legal procedure of banishing monk so-and-so should remain silent. ",
+  "pli-tv-kd11:17.2.15": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:17.2.16": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:17.2.17": "The Sangha has lifted the legal procedure of banishing monk so-and-so. ",
   "pli-tv-kd11:17.2.18": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
