Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -682,8 +682,8 @@
   "pli-tv-kd11:18.1.5": "he went to them, bowed, and sat down. ",
   "pli-tv-kd11:18.1.6": "After Sāriputta had instructed, inspired, and gladdened Citta with a teaching, ",
   "pli-tv-kd11:18.1.7": "Citta said, ",
-  "pli-tv-kd11:18.1.8": "“Venerables, please accept a meal for new arrivals from me tomorrow.” ",
-  "pli-tv-kd11:18.1.9": "And they accepted by remaining silent. ",
+  "pli-tv-kd11:18.1.8": "“Venerables, please accept a meal for visitors from me tomorrow.” ",
+  "pli-tv-kd11:18.1.9": "They accepted by remaining silent. ",
   "pli-tv-kd11:18.2.1": "When he knew that they had accepted, Citta got up from his seat, bowed down, circumambulated them with his right side toward them, and went to Sudhamma. He bowed to him ",
   "pli-tv-kd11:18.2.2": "and said, ",
   "pli-tv-kd11:18.2.3": "“Venerable, please accept tomorrow’s meal from me together with the senior monks.” ",
