Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -688,10 +688,10 @@
   "pli-tv-kd11:18.2.2": "and said, ",
   "pli-tv-kd11:18.2.3": "“Venerable, please accept tomorrow’s meal from me together with the senior monks.” ",
   "pli-tv-kd11:18.2.4": "Sudhamma thought, ",
-  "pli-tv-kd11:18.2.5": "“Previously when Citta wanted to invite the Sangha, a group of monks, or an individual monk, he would not do so without getting my permission. ",
-  "pli-tv-kd11:18.2.6": "But now he has invited the senior monks without my permission. ",
+  "pli-tv-kd11:18.2.5": "“Previously when Citta wanted to invite the Sangha, a group of monks, or an individual monk, he wouldn’t do so without getting my permission. ",
+  "pli-tv-kd11:18.2.6": "But now he has. ",
   "pli-tv-kd11:18.2.7": "He’s been corrupted, this Citta. He’s uninterested and has no affection for me.” He said to Citta, ",
-  "pli-tv-kd11:18.2.8": "“There’s no need; I won’t accept.” ",
+  "pli-tv-kd11:18.2.8": "“There’s no need. I won’t accept.” ",
   "pli-tv-kd11:18.2.9": "Citta asked him a second ",
   "pli-tv-kd11:18.2.10": "and a third time, ",
   "pli-tv-kd11:18.2.12": "but got the same reply. ",
