Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -744,9 +744,9 @@
   "pli-tv-kd11:18.6.7": "This is the motion. ",
   "pli-tv-kd11:18.6.8": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:18.6.9": "The monk Sudhamma has demeaned and insulted the householder Citta, who has faith and confidence, who’s a donor, benefactor, and supporter of the Sangha. ",
-  "pli-tv-kd11:18.6.10": "The Sangha is doing a legal procedure of reconciliation against the monk Sudhamma, ",
+  "pli-tv-kd11:18.6.10": "The Sangha does a legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:18.6.11": "instructing him to ask Citta for forgiveness. ",
-  "pli-tv-kd11:18.6.12": "Any monk who approves of doing a legal procedure of reconciliation against the monk Sudhamma, instructing him to ask Citta for forgiveness, should remain silent. ",
+  "pli-tv-kd11:18.6.12": "Any monk who approves of doing this legal procedure should remain silent. ",
   "pli-tv-kd11:18.6.13": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:18.6.14": "For the second time I speak on this matter … ",
   "pli-tv-kd11:18.6.15": "For the third time I speak on this matter. ",
