Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -935,7 +935,7 @@
   "pli-tv-kd11:25.2.10": "The Sangha does a legal procedure of ejecting Channa for not recognizing an offense, ",
   "pli-tv-kd11:25.2.11": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:25.2.12": "Any monk who approves of doing this legal procedure ",
-  "pli-tv-kd11:25.2.13": "prohibiting him from living with the Sangha, should remain silent. ",
+  "pli-tv-kd11:25.2.13": "should remain silent. ",
   "pli-tv-kd11:25.2.14": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:25.2.15": "For the second time I speak on this matter … ",
   "pli-tv-kd11:25.2.16": "For the third time I speak on this matter. ",
