Translations by trush23 to translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn4_translation-gu-trush.json
@@ -1,4 +1,5 @@
 {
   "mn4:0.1": "મજ્જ઼િમ નિકાય ૪",
-  "mn4:0.2": "ભયભેરવ સૂત્ર"
+  "mn4:0.2": "ભયભેરવ સૂત્ર",
+  "mn4:1.1": "એવું મેં સાંભળ્યું—"
 }
