Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
@@ -6,7 +6,7 @@
   "pli-tv-bu-vb-ss13:1.1.0": "Origin story ",
   "pli-tv-bu-vb-ss13:1.1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
   "pli-tv-bu-vb-ss13:1.1.2": "At that time the bad and shameless monks Assaji and Punabbasuka were staying at Kīṭāgiri. ",
-  "pli-tv-bu-vb-ss13:1.1.3": "and were misbehaving in many ways. ",
+  "pli-tv-bu-vb-ss13:1.1.3": "They were misbehaving in many ways. ",
   "pli-tv-bu-vb-ss13:1.1.4": "They planted flowering trees, watered and plucked them, and then tied the flowers together. ",
   "pli-tv-bu-vb-ss13:1.1.5": "They made the flowers into garlands, garlands with stalks on one side and garlands with stalks on both sides. ",
   "pli-tv-bu-vb-ss13:1.1.6": "They made flower arrangements, wreaths, ornaments for the head, ornaments for the ears, and ornaments for the chest. And they had others do the same. ",
